--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
         <button type="submit">Find My Zodiac Sign</button>
       </form>
       <div id="result"></div>
+      <div
+        id="loadingContainer"
+        class="loading-container"
+        style="display: none"
+      >
+        <div class="loading-spinner"></div>
+        <div class="loading-text">Consulting the stars...</div>
+      </div>
     </div>
   </body>
 </html>
