integrated solar system project with the astrology app

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <script src="./script.js" defer></script>
   </head>
   <body>
+    <!-- integrated from solar system project -->
+    <div class="upper-container">
+      <div class="planet-container">
+        <div class="orbit">
+          <div class="Sum">
+            <img src="./assets/images/sun.png" alt="" />
+          </div>
+          <div class="mercury_orbit"></div>
+          <div class="Mercury">
+            <img src="./assets/images/mercury.png" alt="" />
+          </div>
+          <div class="venus_orbit"></div>
+          <div class="Venus">
+            <img src="./assets/images/Venus.png" alt="" />
+          </div>
+          <div class="earth_orbit"></div>
+          <div class="Earth">
+            <img src="./assets/images/earth.png" alt="" />
+          </div>
+          <div class="mars_orbit"></div>
+          <div class="Mars">
+            <img src="./assets/images/mars.png" alt="" />
+          </div>
+          <div class="jupyter_orbit"></div>
+          <div class="Jupiter">
+            <img src="./assets/images/jupyter.png" alt="" />
+          </div>
+          <div class="saturn_orbit"></div>
+          <div class="Saturn">
+            <img src="./assets/images/saturn.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- zodiac sign finder -->
     <div class="container">
       <h1>✨ Zodiac Sign Finder</h1>
       <form id="zodiacForm">
