--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         </div>
       </div>
     </div>
+    <!-- Twinkling Stars Animation : Let's do it! -->
+    <div class="stars" id="star-container"></div>
     <!-- zodiac sign finder -->
     <div class="container">
       <h1>✨ Zodiac Sign Finder</h1>
